force-app/main/default/objects/Time_Sheet__c/fields/A1__c.field-meta.xml
<CustomField>
    <fullName>A1__c</fullName>
    <label>A1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>