force-app/main/default/objects/Time_Sheet__c/fields/A2__c.field-meta.xml
<CustomField>
    <fullName>A2__c</fullName>
    <label>A2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>