force-app/main/default/objects/Time_Sheet__c/fields/A3__c.field-meta.xml
<CustomField>
    <fullName>A3__c</fullName>
    <label>A3</label>
    <length>122</length>
    <type>Text</type>
</CustomField>