force-app/main/default/objects/Time_Sheet__c/fields/B1__c.field-meta.xml
<CustomField>
    <fullName>B1__c</fullName>
    <label>B1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>