force-app/main/default/objects/Time_Sheet__c/fields/B2__c.field-meta.xml
<CustomField>
    <fullName>B2__c</fullName>
    <label>B2</label>
    <length>11</length>
    <type>Text</type>
</CustomField>