force-app/main/default/objects/Time_Sheet__c/fields/B3__c.field-meta.xml
<CustomField>
    <fullName>B3__c</fullName>
    <label>B3</label>
    <length>111</length>
    <type>Text</type>
</CustomField>