force-app/main/default/objects/Time_Sheet__c/fields/C1__c.field-meta.xml
<CustomField>
    <fullName>C1__c</fullName>
    <label>C1</label>
    <length>111</length>
    <type>Text</type>
</CustomField>