force-app/main/default/objects/Time_Sheet__c/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <label>C2</label>
    <length>111</length>
    <type>Text</type>
</CustomField>