force-app/main/default/objects/Time_Sheet__c/fields/C3__c.field-meta.xml
<CustomField>
    <fullName>C3__c</fullName>
    <label>C3</label>
    <length>111</length>
    <type>Text</type>
</CustomField>