force-app/main/default/objects/Time_Sheet__c/fields/linjk__c.field-meta.xml
<CustomField>
    <fullName>linjk__c</fullName>
    <label>linjk</label>
    <type>Url</type>
</CustomField>