force-app/main/default/objects/Time_Sheet__c/fields/picklist__c.field-meta.xml
<CustomField>
    <fullName>picklist__c</fullName>
    <label>picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>