force-app/main/default/objects/Time_Sheet__c/fields/Student_Details__c.field-meta.xml
<CustomField>
    <fullName>Student_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Details</label>
    <referenceTo>Student_Details__c</referenceTo>
    <relationshipLabel>Time Sheet</relationshipLabel>
    <relationshipName>Time_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>