force-app/main/default/objects/Time_Sheet__c/fields/StudentName__c.field-meta.xml
<CustomField>
    <fullName>StudentName__c</fullName>
    <formula>Student_Details__r.Student_Name__c</formula>
    <label>StudentName</label>
    <type>Text</type>
</CustomField>