force-app/main/default/objects/Time_Sheet__c/fields/TestMulPick1__c.field-meta.xml
<CustomField>
    <fullName>TestMulPick1__c</fullName>
    <label>TestMulPick1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PICK1</fullName>
            </value>
            <value>
                <fullName>PICK2</fullName>
            </value>
            <value>
                <fullName>PICK3</fullName>
            </value>
            <value>
                <fullName>PICK4</fullName>
            </value>
            <value>
                <fullName>PICK5</fullName>
            </value>
            <value>
                <fullName>PICK6</fullName>
            </value>
            <value>
                <fullName>PICK7</fullName>
            </value>
            <value>
                <fullName>PICK8</fullName>
            </value>
            <value>
                <fullName>PICK9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>