force-app/main/default/objects/Time_Sheet__c/fields/TestMulPick__c.field-meta.xml
<CustomField>
    <fullName>TestMulPick__c</fullName>
    <label>TestMulPick</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
            <value>
                <fullName>Test4</fullName>
            </value>
            <value>
                <fullName>Test5</fullName>
            </value>
            <value>
                <fullName>Test6</fullName>
            </value>
            <value>
                <fullName>Test7</fullName>
            </value>
            <value>
                <fullName>Test8</fullName>
            </value>
            <value>
                <fullName>Test9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>